--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField 'String', "API_KEY", API_KEY
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -81,5 +84,18 @@ dependencies {
 
         testImplementation unitTestLibs
         androidTestImplementation androidTestsLibs
+
+        annotationProcessor 'com.google.auto.value:auto-value:1.4'
+        compileOnly 'com.jakewharton.auto.value:auto-value-annotations:1.4'
+
+        implementation 'com.squareup.moshi:moshi:1.5.0'
+        api 'com.google.code.gson:gson:2.8.4'
+
+        annotationProcessor 'com.ryanharter.auto.value:auto-value-moshi:0.4.5'
+
+        compileOnly 'com.ryanharter.auto.value:auto-value-moshi-annotations:0.4.5'
+
+        annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.7.0'
+        implementation 'com.ryanharter.auto.value:auto-value-gson-annotations:0.7.0'
     }
 }
